# humanizer

./: .gitignore  README.md  pyproject.toml
src/humanizer/: __init__.py  benchmark.py  cli.py  features.py  perturb.py
tests/: test_humanizer.py
